policies/exit-node-base/exit-node-vpn-exit-node-base.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cpg
  name: cpg-exit-node-vpn-exit-node-base
  namespace: exit-node-base
spec:
  egress:
  # UDP/53 to io.kubernetes.pod.namespace=kube-system, k8s-app=kube-dns
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  # TCP/8200 to app.kubernetes.io/name=vault, io.kubernetes.pod.namespace=vault
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: vault
        io.kubernetes.pod.namespace: vault
    toPorts:
    - ports:
      - port: "8200"
        protocol: TCP
  # TCP/8443 to app.kubernetes.io/name=traefik, io.kubernetes.pod.namespace=traefik
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: traefik
        io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: "8443"
        protocol: TCP
  # UDP/443, UDP/5351 to entity host
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "443"
        protocol: UDP
      - port: "5351"
        protocol: UDP
  # UDP/1900 to io.kubernetes.pod.namespace=
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: ""
    toPorts:
    - ports:
      - port: "1900"
        protocol: UDP
  # UDP/3478 to app.kubernetes.io/name=netbird-management, io.kubernetes.pod.namespace=vpn
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: netbird-management
        io.kubernetes.pod.namespace: vpn
    toPorts:
    - ports:
      - port: "3478"
        protocol: UDP
  # UDP/53 to app=blocky, io.kubernetes.pod.namespace=blocky
  - toEndpoints:
    - matchLabels:
        app: blocky
        io.kubernetes.pod.namespace: blocky
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  endpointSelector:
    matchLabels:
      app: exit-node-vpn-exit-node-base
status: {}
